--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix inventory-app-server && npm install --prefix inventory-app-client && npm run build --prefix inventory-app-client",
-    "start": "npm install start --prefix inventory-app-server"
+    "start": "npm run start --prefix inventory-app-server"
   },
   "keywords": [],
   "author": "",
